# colnade

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  data.json  mkdocs.yml  noxfile.py  pyproject.toml  spec.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  coverage.yml  docs.yml  publish.yml
benchmarks/: README.md  bench_backends.py  bench_overhead.py  bench_validation.py
colnade-dask/: README.md  pyproject.toml
colnade-dask/src/colnade_dask/: __init__.py  adapter.py  io.py
colnade-pandas/: README.md  pyproject.toml
colnade-pandas/src/colnade_pandas/: __init__.py  adapter.py  conversion.py  io.py
colnade-polars/: README.md  pyproject.toml
colnade-polars/src/colnade_polars/: __init__.py  adapter.py  conversion.py  io.py
docs/: CNAME  api_reference.md  comparison.md  index.md
docs/api/: dask.md  dataframe.md  expressions.md  index.md  pandas.md  polars.md  schema.md  types.md
docs/assets/stylesheets/: home.css
docs/getting-started/: installation.md  quick-start.md
docs/overrides/: home.html
docs/tutorials/: basic-usage.md  full-pipeline.md  generic-functions.md  joins.md  nested-types.md  null-handling.md
docs/user-guide/: core-concepts.md  dask-backend.md  dataframes.md  expressions.md  joins.md  nested-types.md  performance.md  schemas.md  type-checking.md
examples/: basic_usage.py  full_pipeline.py  generic_functions.py  joins.py  nested_types.py  null_handling.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_1f21014f288dcb7f___init___py.html  z_1f21014f288dcb7f_adapter_py.html  z_1f21014f288dcb7f_conversion_py.html  z_1f21014f288dcb7f_io_py.html  z_23048af3e780706d___init___py.html  z_23048af3e780706d__protocols_py.html  z_23048af3e780706d__types_py.html  z_23048af3e780706d_arrow_py.html  z_23048af3e780706d_constraints_py.html  z_23048af3e780706d_dataframe_py.html  z_23048af3e780706d_dtypes_py.html  z_23048af3e780706d_expr_py.html  z_23048af3e780706d_schema_py.html  z_23048af3e780706d_validation_py.html  z_77a1616fd4c7b32b___init___py.html  z_77a1616fd4c7b32b_adapter_py.html  z_77a1616fd4c7b32b_io_py.html  z_e1dc920396492dff___init___py.html  z_e1dc920396492dff_adapter_py.html  z_e1dc920396492dff_conversion_py.html  z_e1dc920396492dff_io_py.html
scripts/: check_api_docs.py  check_changelog.py  error_showcase.py  generate_error_screenshot.py
src/colnade/: __init__.py  _protocols.py  _types.py  arrow.py  constraints.py  dataframe.py  dtypes.py  expr.py  ops.py  schema.py  series.py  udf.py  validation.py
tests/: conftest.py
tests/e2e/: conftest.py  test_aggregation_pipeline.py  test_lazy_pipeline.py  test_multi_join_pipeline.py  test_nested_pipeline.py  test_null_pipeline.py  test_polars_e2e.py  test_users_pipeline.py
tests/integration/: test_arrow_boundary.py  test_cross_layer.py  test_cross_schema_guard.py  test_dask_coverage.py  test_dask_execution.py  test_dask_io.py  test_edge_cases.py  test_field_validation_dask.py  test_field_validation_pandas.py  test_field_validation_polars.py  test_negative_integration.py  test_pandas_coverage.py  test_pandas_execution.py  test_pandas_io.py  test_polars_coverage.py  test_polars_execution.py  test_polars_io.py  test_typed_construction.py  test_validation_polars.py  test_with_raw.py
tests/typing/: test_cast_schema.py  test_coverage_matrix.py  test_dataframe.py  test_dtypes.py  test_error_messages.py  test_expr.py  test_generic_functions.py  test_join.py  test_nested_types.py  test_pipeline_types.py  test_schema.py  test_smoke.py
tests/unit/: test_arrow.py  test_cast_schema.py  test_collect_column_names.py  test_constraints.py  test_dataframe.py  test_dtypes.py  test_expr.py  test_field_schema.py  test_join.py  test_nested_types.py  test_polars_dtype_mapping.py  test_polars_expr_translation.py  test_schema.py  test_smoke.py  test_validation.py
