[project]
name = "colnade"
version = "0.1.0"
description = "A statically type-safe DataFrame abstraction layer"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "typing_extensions>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/colnade"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "ty>=0.0.1",
    "colnade-polars",
]

[tool.uv.workspace]
members = ["colnade-polars"]

[tool.uv.sources]
colnade = { workspace = true }
colnade-polars = { workspace = true }

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["colnade", "colnade_polars"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
