[project]
name = "colnade"
version = "0.5.0"
description = "A statically type-safe DataFrame abstraction layer"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
authors = [
    { name = "jwde" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "typing_extensions>=4.0",
]

[project.urls]
Homepage = "https://colnade.com"
Documentation = "https://colnade.com"
Repository = "https://github.com/jwde/colnade"
Issues = "https://github.com/jwde/colnade/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/colnade"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "ty>=0.0.1",
    "colnade-polars",
    "colnade-pandas",
    "colnade-dask",
    # Documentation
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.24",
    "nox>=2026.2.9",
]

[tool.uv.workspace]
members = ["colnade-polars", "colnade-pandas", "colnade-dask"]

[tool.uv.sources]
colnade = { workspace = true }
colnade-polars = { workspace = true }
colnade-pandas = { workspace = true }
colnade-dask = { workspace = true }

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["colnade", "colnade_polars", "colnade_pandas", "colnade_dask"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
