[project]
name = "colnade-pandas"
version = "0.1.0"
description = "Pandas backend adapter for Colnade"
requires-python = ">=3.10"
license = "MIT"
readme = "README.md"
authors = [
    { name = "jwde" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "colnade>=0.3.0",
    "pandas>=2.0",
    "pyarrow>=12.0",
]

[project.urls]
Homepage = "https://colnade.com"
Documentation = "https://colnade.com"
Repository = "https://github.com/jwde/colnade"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/colnade_pandas"]
