[project]
name = "colnade-polars"
version = "0.1.0"
description = "Polars backend adapter for Colnade"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "colnade>=0.1.0",
    "polars>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/colnade_polars"]
